[metadata]
name = recall-ccooper
version = 0.0.2
author = Chris Cooper
author_email = chris@cooper.info
description = A reinforcement learning framework.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/C-J-Cooper/recall
project_urls =
    Bug Tracker = https://github.com/C-J-Cooper/recall/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = recall
packages = find:
python_requires = >=3.6

[options.packages.find]
where = recall
